--- a/app/src/main/res/layout/activity_devicelist_drawer.xml
+++ b/app/src/main/res/layout/activity_devicelist_drawer.xml
@@ -14,18 +14,18 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/rounded"
+            android:src="@drawable/bluetooth_searching"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="120dp"
             android:layout_marginTop="20dp"
             android:scaleType="fitCenter" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="alexmorgan@gmail.com"
+            android:text="Please select your device!"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="70dp"
             />
 
     </RelativeLayout>
